# CG_Programming_2023

01/: 02.cpp  a.out  about.txt  main.cpp  test.c
02/: a.out  about.txt  issue02.cpp  main02.cpp  test.cpp
03/: 03.cpp  a.out  about.txt  main03.cpp  main03_01.cpp
04/: 04_00_x22004.mov  04_01_x22004.mov  a.out  about.txt  issue04.cpp  main04.cpp  myPrimitives2D.h
05/: a.out  about.txt  main05.cpp
06/: a.out  about.txt  main06.cpp
07/: a.out  about.txt  main07.cpp  main07_copy.cpp  sample07.cpp
08/: CGp_08_x22004_1.mov  CGp_08_x22004_2.mov  a.out  about.txt  colorlize.cpp  main08 (1).cpp  main08.cpp  main08_bak_12-5.cpp
09/: a.out  about.txt  colorBlocks.cpp  main08 copy.cpp  main08.cpp  main09.cpp
10/: CMakeLists.txt  about.txt  chainsaw.cpp  main.cpp
11/: 11.cpp  50balls.cpp  CMakeLists.txt  a.out  about.txt
12/: 11.cpp  a.out  about.txt  attract.cpp  ballshot.cpp  gravity.cpp  gravity_copy.cpp  issue1.cpp  kansuu_rei.cpp  main12.cpp  rake.cpp
13/: a.out  about.txt  box.h  issue1 copy.cpp  issue1.cpp  issue1_copy_2.cpp  issue2.cpp  issue3.cpp  issue3_copy.cpp  main13.cpp  pdata.txt  pdata0.txt  pdata1.txt  pdata2.txt  pdata3.txt  shima.cpp
13/opencv/: CMakeLists.txt
13/opencv/src/: moyac.cpp
14/: CGP_14_issue0_x22004.mov  CGP_14_issue1_x22004.mov  a.out  about.txt  issue2.cpp  main14_before_edit.cpp  main14b copy.cpp  main14b.cpp  main14b_test.cpp
15/: a.out  about.txt  issue1.cpp  issue2.cpp  kanran.cpp  kanran2.cpp  main15.cpp
